Revision history for Exobrain

{{$NEXT}}

    * API: Exobrain::Agent now provides the 'cached' keyword for
      declaring persistent attributes.

1.08      2014-04-30 00:39:57+08:00 Australia/Perth

    * API: `use Exobrain` automatically enables Method::Signatures.
    * DISTRO: HabitRPG is now packaged separately as Exobrain::HabitRPG
    * DISTRO: Foursquare is now packaged separately as Exobrain::Foursquare
    * API: Exobrain::Agent has better documentation and functionality.
    * API: Measurement::Geo is now a role, not a class.
    * API: Added a `can_run` method to Exobrain
    * API: Exobrain::Agent::Depends allow dependencies to be delcared.
    * TESTING: Better testing for Exobrain::Agent.
    * TESTING: Exobrain::Test will load classes from t/lib
    * AGENTS: Ported `bee-habit` to Exobrain::Agent::Action::SimpleBeeHabit;
    * AGENTS: Ported `geo-personallog` to Exobrain::Agent::Action::GeoLog;
    * AGENTS: Ported `sentbox-reward` to Exobrain::Agent::Action::SentmailXP;
    * DOCS: Much documentation added.

1.07      2014-03-04 22:46:36PST-0800 America/Los_Angeles

    * DEBUG: Added 'inject-done' debugging script to generate
             Intent::PersonalLog messages.
    * DISTRO: Turned Idonethis into a separate component
              (Exobrain::Idonethis)

1.06      2014-03-04 14:28:43PST-0800 America/Los_Angeles

    * BUILD: Added dependency on IPC::System::Simple, which is
             needed for `exobrain setup`.

1.05      2014-03-03 17:35:59PST-0800 America/Los_Angeles

    * FEATURE: Added a `exobrain debug` command for bus debugging.
               This obsoletes the old `debug.pl` command.
    * DOCS: Updated the README.md file with current insall instructions.
    * INTERNAL: Improved internal agent handling.
    * API: `use Exobrain` enables strict, warnings, 5.10 features.
    * TESTS: Added tests for agents and strict, warnings, 5.10 features. :)
    * DISTRO: Split `Exobrain::Beeminder` into its own separate distro.